--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsup src",
+    "start":"node dist/server.js"
+
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "tsup": "^6.6.3",
-    "tsx": "^3.12.3"
+    "tsx": "^3.12.3",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "express": "^4.18.2"
