--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "start": "node dist/server.js",
     "build": "tsup src",
-    "start": "node dist/server.js"
+    "dev": "tsx watch src/server.ts"
   },
   "repository": {
     "type": "git",
