--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
